profilelist1exp/unpackaged/objects/MDF_Program__c.object
<CustomObject>
    <description>Viper Project</description>
    <fields>
        <fullName>ARV_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>STORY 5854573</description>
        <label>ARV Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MDF_Programs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Audience_Description__c</fullName>
        <label>Audience Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Audience_Size__c</fullName>
        <label>Audience Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available_Action_Delete__c</fullName>
        <formula>IF(AND(ISPICKVAL(Program_Status__c, &apos;Pending&apos;), OwnerId =  $User.Id ) ,
HYPERLINK(&apos;/apex/DeleteMDFProgram?id=&apos;&amp; Id ,IMAGE(&quot;resource/1298546011000/DeleteMdfPgm&quot;, &apos;Delete&apos;),&apos;_parent&apos;), &apos;[No Action Available]&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available_Action__c</fullName>
        <formula>IF(( $Profile.Id = &apos;00eA0000000hNrY&apos; || $Profile.Id =&apos;00eA0000000hNqj&apos;||$Profile.Id =&apos;00e30000000nJ6K&apos;) &amp;&amp; 
(ISPICKVAL(Program_Status__c , &apos;Pending&apos;) ) , HYPERLINK(&apos;/apex/AutoApproveProgram?id=&apos;&amp; Id, 
IMAGE(&quot;resource/1298546011000/AutoApproveMDFPgm&quot;, &apos;Auto Approve&apos;),&apos;_parent&apos;), &apos;[No Action Available]&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Segment__c</fullName>
        <label>Business Segment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Corporate Events</fullName>
                </value>
                <value>
                    <fullName>Global Business</fullName>
                </value>
                <value>
                    <fullName>Int&apos;l</fullName>
                </value>
                <value>
                    <fullName>Large Business</fullName>
                </value>
                <value>
                    <fullName>Medium Business</fullName>
                </value>
                <value>
                    <fullName>S&amp;P Client Peripherals</fullName>
                </value>
                <value>
                    <fullName>S&amp;P Displays</fullName>
                </value>
                <value>
                    <fullName>S&amp;P Enterprise</fullName>
                </value>
                <value>
                    <fullName>S&amp;P Imaging</fullName>
                </value>
                <value>
                    <fullName>S&amp;P Operations</fullName>
                </value>
                <value>
                    <fullName>S&amp;P Software</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Small Business</fullName>
                </value>
                <value>
                    <fullName>WWP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Sub_Region__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>All Countries</fullName>
                </value>
                <value>
                    <fullName>ANDEAN</fullName>
                </value>
                <value>
                    <fullName>ANZ</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Ecuador</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Ireland</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>Malaysia</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>Morocco</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>New Zealand</fullName>
                </value>
                <value>
                    <fullName>NOLA</fullName>
                </value>
                <value>
                    <fullName>Norway</fullName>
                </value>
                <value>
                    <fullName>Panama</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Detailed_Job_Description__c</fullName>
        <label>Detailed Job Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <label>Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fiscal_Quarter__c</fullName>
        <label>Fiscal Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY12Q1</fullName>
                </value>
                <value>
                    <fullName>FY12Q2</fullName>
                </value>
                <value>
                    <fullName>FY12Q3</fullName>
                </value>
                <value>
                    <fullName>FY12Q4</fullName>
                </value>
                <value>
                    <fullName>FY13Q1</fullName>
                </value>
                <value>
                    <fullName>FY13Q2</fullName>
                </value>
                <value>
                    <fullName>FY13Q3</fullName>
                </value>
                <value>
                    <fullName>FY13Q4</fullName>
                </value>
                <value>
                    <fullName>FY14Q1</fullName>
                </value>
                <value>
                    <fullName>FY14Q2</fullName>
                </value>
                <value>
                    <fullName>FY14Q3</fullName>
                </value>
                <value>
                    <fullName>FY14Q4</fullName>
                </value>
                <value>
                    <fullName>FY15Q1</fullName>
                </value>
                <value>
                    <fullName>FY15Q2</fullName>
                </value>
                <value>
                    <fullName>FY15Q3</fullName>
                </value>
                <value>
                    <fullName>FY15Q4</fullName>
                </value>
                <value>
                    <fullName>FY16Q1</fullName>
                </value>
                <value>
                    <fullName>FY16Q2</fullName>
                </value>
                <value>
                    <fullName>FY16Q3</fullName>
                </value>
                <value>
                    <fullName>FY16Q4</fullName>
                </value>
                <value>
                    <fullName>FY17Q1</fullName>
                </value>
                <value>
                    <fullName>FY17Q2</fullName>
                </value>
                <value>
                    <fullName>FY17Q3</fullName>
                </value>
                <value>
                    <fullName>FY17Q4</fullName>
                </value>
                <value>
                    <fullName>FY18Q1</fullName>
                </value>
                <value>
                    <fullName>FY18Q2</fullName>
                </value>
                <value>
                    <fullName>FY18Q3</fullName>
                </value>
                <value>
                    <fullName>FY18Q4</fullName>
                </value>
                <value>
                    <fullName>FY19Q1</fullName>
                </value>
                <value>
                    <fullName>FY19Q2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HCID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Headcount</label>
        <referenceTo>Headcount__c</referenceTo>
        <relationshipLabel>MDF Programs</relationshipLabel>
        <relationshipName>MDF_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>POP_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>POP Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MDF_Programs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>POP_Details__c</fullName>
        <label>POP Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>POP_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>POP Owner</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 OR 6 OR 7</booleanFilter>
            <errorMessage>Please enter only Viper users as POP Owner.</errorMessage>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>MDF Co-Marketing  Manager</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>MDF Dell Management Executive</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>MDF Finance Users</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>MDF Marketing Operations / Contract Admin</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>MDF Product Managers</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>MDF Program Owners</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>System  Administrator</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Programs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Preferred_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Preferred Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pricing_Type__c</fullName>
        <label>Pricing Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Variable</fullName>
                </value>
                <value>
                    <fullName>Non-Variable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MDF_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Detail__c</fullName>
        <label>Program Detail</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Program_Id__c</fullName>
        <displayFormat>Prog-{0000000}</displayFormat>
        <label>Program Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Program_Objective__c</fullName>
        <label>Program Objective</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Program_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Owner</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 OR 6 OR 7</booleanFilter>
            <errorMessage>Please enter only Viper users as Program Owner.</errorMessage>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>MDF Co-Marketing  Manager</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>MDF Dell Management Executive</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>MDF Finance Users</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>MDF Marketing Operations / Contract Admin</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>MDF Product Managers</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>MDF Program Owners</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>System Administrator</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Status__c</fullName>
        <label>Program Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Type__c</fullName>
        <formula>$RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Card_Price__c</fullName>
        <label>Rate Card Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Americas</fullName>
                    <default>true</default>
                    <label>Americas</label>
                </value>
                <value>
                    <fullName>APJ</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Region__c</fullName>
        <label>Sub Region</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>APJ</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Emerging</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                    <default>true</default>
                    <label>North America</label>
                </value>
                <value>
                    <fullName>UK-I</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UniqueID__c</fullName>
        <label>UniqueID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Vendor_Materials_Needed__c</fullName>
        <label>Vendor Materials Needed</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>MDF Program</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Fiscal_Quarter__c</columns>
        <columns>Program_Id__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Program_Type__c</columns>
        <columns>Pricing_Type__c</columns>
        <columns>Rate_Card_Price__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Fiscal_Quarters_and_Business_Segments</fullName>
        <columns>NAME</columns>
        <columns>Business_Segment__c</columns>
        <columns>Fiscal_Quarter__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <label>Fiscal Quarters and Business Segments</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MDF Programs</pluralLabel>
    <recordTypes>
        <fullName>Contest</fullName>
        <active>true</active>
        <description>Incentive based sales program where sales teams earn incentives based on specific criteria</description>
        <label>Contest</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dell_com</fullName>
        <active>true</active>
        <description>Placement on Dell website - configurator, featured products, banners, etc. Does not include content created by outside advertising agencies.</description>
        <label>Dell.com</label>
    </recordTypes>
    <recordTypes>
        <fullName>Email</fullName>
        <active>true</active>
        <description>Placement in email marketing communication to Dell&apos;s exisiting or prospective customers</description>
        <label>Email</label>
    </recordTypes>
    <recordTypes>
        <fullName>Event</fullName>
        <active>true</active>
        <description>Scheduled occasion for partner to interact with internal sales/marketing teams.</description>
        <label>Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>Field_Event</fullName>
        <active>true</active>
        <description>Scheduled occasion for partner to interact with field sales/marketing teams or customers</description>
        <label>Field Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>Headcount</fullName>
        <active>true</active>
        <description>Dedicated sales or marketing partner resource</description>
        <label>Headcount</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other</fullName>
        <active>true</active>
        <description>Programs not outlined elsewhere</description>
        <label>Other</label>
    </recordTypes>
    <recordTypes>
        <fullName>Print</fullName>
        <active>true</active>
        <description>Dell or 3rd party generated printed advertising provided to Dell&apos;s existing or prospective customers</description>
        <label>Print</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Tools</fullName>
        <active>true</active>
        <description>Collateral or Promotional Items designed for use by Dell sales and marketing teams to generate S&amp;P sales</description>
        <label>Sales Tools</label>
    </recordTypes>
    <recordTypes>
        <fullName>Seed_Units</fullName>
        <active>true</active>
        <description>Evaluation units provided to Dell&apos;s existing or potential customers to generate sales</description>
        <label>Seed Units</label>
    </recordTypes>
    <recordTypes>
        <fullName>Training</fullName>
        <active>true</active>
        <description>Scheduled occasion for partner to conduct in person or web based training with sales or marketing teams</description>
        <label>Training</label>
    </recordTypes>
    <recordTypes>
        <fullName>Web</fullName>
        <active>true</active>
        <description>Placement on 3rd party website or content created by outside advertising agency</description>
        <label>Web</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>HCID_Value_Edit</fullName>
        <active>true</active>
        <errorConditionFormula>HCID__c &lt;&gt; PRIORVALUE(HCID__c)</errorConditionFormula>
        <errorDisplayField>HCID__c</errorDisplayField>
        <errorMessage>HCID cannot be changed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_Pgm_Name_Char_Limit</fullName>
        <active>true</active>
        <description>To validate when the length of MDF Program Name exceeds the character limit of 75.</description>
        <errorConditionFormula>LEN( Name) &gt; 75</errorConditionFormula>
        <errorMessage>MDF Program Name cannot exceed the allowed character limit of 75.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Viper_POP_details_Editability</fullName>
        <active>true</active>
        <description>Marketing Operations should be able to manually edit the POP details of any program (any program type).Program Owners and Marketing Managers should be able to edit POP details only when program type = &quot;Other&quot; and &quot;Sales Tools&quot;</description>
        <errorConditionFormula>NOT(  CONTAINS( $Profile.Name,&quot;MDF Marketing Operations / Contract Admin&quot;)  ||
((  Program_Type__c  =  &apos;Other&apos; || Program_Type__c  =  &apos;Sales Tools&apos;) &amp;&amp; 
( CONTAINS( $Profile.Name,&quot;MDF Program Owners&quot;)  || CONTAINS( $Profile.Name,&quot;MDF Co-Marketing  Manager&quot;)  ||  CONTAINS( $Profile.Name,&quot;MDF Product Managers&quot;))))
 &amp;&amp; ISCHANGED(POP_Details__c)</errorConditionFormula>
        <errorDisplayField>POP_Details__c</errorDisplayField>
        <errorMessage>This field is not editable.</errorMessage>
    </validationRules>
</CustomObject>